--- a/css/riset/riset.scss
+++ b/css/riset/riset.scss
@@ -20,7 +20,6 @@
 
     /* btn */
     --danger: #dc3545;
-    --primary: #0b31da;
     // --primary: #007bff;
     --warning: #ffc107;
     --dark: rgb(55 65 81);
@@ -29,7 +28,8 @@
 
 
     --danger-hover: #c52939;
-    --primary-hover: #1836bd;
+    --primary-hover: #0d46e0;
+    // --primary-hover: #1836bd;
     --warning-hover: #e2ab06;
     --dark-hover: #2F3949;
     --success-hover: #19cf84;
@@ -42,7 +42,8 @@
 
     --outline-input: #0176f4bd;
     --outline-button: #63aeffbd;
-    --outline-primary: #0e31ce;
+    --outline-primary: #0642e6e5;
+    // --outline-primary: #0e31ce;
     --outline-warning: #ffe601f1;
     --outline-success: #1fdd8ee3;
     --outline-white: rgb(207, 207, 207);
@@ -102,6 +103,10 @@ label,
 span,
 a {
     color: var(--hitam-santai);
+}
+
+label {
+    cursor: pointer;
 }
 
 
@@ -250,6 +255,7 @@ section {
 
 
 .btn:focus {
+    border-radius: 8px;
     outline: 2px solid var(--outline-button);
 }
 
@@ -270,8 +276,8 @@ section {
 
 .btn-primary {
     color: var(--putih) !important;
-    background-color: var(--primary) !important;
-    border-color: var(--primary) !important;
+    background-color: var(--biru-cerah) !important;
+    border-color: var(--biru-cerah) !important;
 }
 
 .btn-primary:hover {
